test/corpus/labels/directive.test
==========
[labels/directive] combined label and directive without space
==========
foo:.bar
---

(program
  (label)
  (directive
    (control_mnemonic)))

==========
[labels/directive] combined label and directive with space
==========
foo: .bar
---

(program
  (label)
  (directive
    (control_mnemonic)))

==========
[labels/directive] combined label and directive with tab
==========
foo:	.bar
---

(program
  (label)
  (directive
    (control_mnemonic)))

==========
[labels/directive] label with space following control directive
==========
.foo
bar :
---

(program
  (directive
    (control_mnemonic))
  (label))

==========
[labels/directive] label with space following control directive with operand
==========
.foo 1
bar :
---

(program
  (directive
    (control_mnemonic)
    (directive_operands
      (decimal)))
  (label))

==========
[labels/directive] label with space following string directive with operand
==========
.string "foo"
bar :
---

(program
  (directive
    (string_mnemonic)
    (directive_operands
      (string)))
  (label))

==========
[labels/directive] numeric label with space following control directive
==========
.foo
1 :
---

(program
  (directive
    (control_mnemonic))
  (numeric_label))

==========
[labels/directive] numeric label with space following control directive with operand
==========
.foo 1
1 :
---

(program
  (directive
    (control_mnemonic)
    (directive_operands
      (decimal)))
  (numeric_label))

==========
[labels/directive] numeric label with space following string directive with operand
==========
.string "foo"
1 :
---

(program
  (directive
    (string_mnemonic)
    (directive_operands
      (string)))
  (numeric_label))
