test/corpus/labels/instruction.test
==========
[labels/instruction] combined label and instruction without space
==========
foo:bar
---

(program
  (label)
  (instruction
    mnemonic: (instruction_mnemonic)))

==========
[labels/instruction] combined label and instruction with space
==========
foo: bar
---

(program
  (label)
  (instruction
    mnemonic: (instruction_mnemonic)))

==========
[labels/instruction] combined label and instruction with tab
==========
foo:	bar
---

(program
  (label)
  (instruction
    mnemonic: (instruction_mnemonic)))
