test/corpus/labels/numeric.test
==========
[labels/numeric] global numeric label
==========
100:
---

(program
  (label))

==========
[labels/numeric] local numeric label
==========
0:
---

(program
  (numeric_label))

==========
[labels/numeric] local numeric label forward reference
==========
foo 1f
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (numeric_label_reference))))

==========
[labels/numeric] local numeric label backward reference
==========
foo 1b
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (numeric_label_reference))))
